[Code Review] Fix multiple compiler warnings